; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_reconnect_thread.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_reconnect_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32, i32, i32 }

@ETIMEDOUT = common dso_local global i64 0, align 8
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"coreaudio: exit the reconnect thread\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @reconnect_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @reconnect_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.coreaudio_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.coreaudio_data*
  store %struct.coreaudio_data* %5, %struct.coreaudio_data** %3, align 8
  %6 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %7 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %6, i32 0, i32 0
  store i32 1, i32* %7, align 4
  br label %8

8:                                                ; preds = %23, %1
  %9 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %10 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %13 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @os_event_timedwait(i32 %11, i32 %14)
  %16 = load i64, i64* @ETIMEDOUT, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %24

18:                                               ; preds = %8
  %19 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %20 = call i64 @coreaudio_init(%struct.coreaudio_data* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  br label %24

23:                                               ; preds = %18
  br label %8

24:                                               ; preds = %22, %8
  %25 = load i32, i32* @LOG_DEBUG, align 4
  %26 = call i32 @blog(i32 %25, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %27 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %28 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %27, i32 0, i32 0
  store i32 0, i32* %28, align 4
  ret i8* null
}

declare dso_local i64 @os_event_timedwait(i32, i32) #1

declare dso_local i64 @coreaudio_init(%struct.coreaudio_data*) #1

declare dso_local i32 @blog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
